# jupytee

./: LICENSE  README.md  jupytee.py  jupyter-gpt.ipynb  pyproj.toml  setup.cfg  setup.py
binder/: environment.yml  postBuild
examples/: jupytee-demo.ipynb
jupytee/: __init__.py  jupytee.py
