# Declarative configuration for setup.py

[metadata]
name             = jupytee
version          = attr: jupytee.__version__
author           = Fernando Pérez
author_email     = fernando.perez@berkeley.edu
description      = Magics for using GPT-like models inside Jupyter.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = ipython, jupyter, GPT-3, OpenAI
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = >= 3.7,

[options.packages.find]
exclude =
    examples*
    docs*
